# Audit

./: .env.example  .gitignore  README.md  alembic.ini  app_demo.py  pyproject.toml  run_validator.bat  run_validator_bg.bat
alembic/: env.py
alembic/versions/: 20260319_1708_create_audit_logs_table.py  20260321_1500_create_knowledge_and_extraction_tables.py  20260322_1200_add_alias_normalized_unique.py
frontend/: index.html  nav_repro.cjs  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  PromptLearningCenter.jsx  promptCenterTypes.js  styles.css
knowledge/: alias_active.json  alias_candidates.json  rule_active.json  rule_candidates.json
llm/: __init__.py  client.py
llm/prompts/: audit_doc_classify_prompt.txt  audit_field_understanding_prompt.txt  audit_learning_base_prompt.txt  audit_prompt_suggestion_prompt.txt  compare_prompt.txt  extract_prompt.txt  (+1 more)
schemas/: __init__.py  compare_schema.py  document_schema.py  evaluation_schema.py
scripts/: demo_canonical_json.py  test_remote_ocr.py  test_remote_ocr_async.py
services/: __init__.py  comparator_service.py  evaluator_service.py  extractor_service.py  knowledge_store.py  paddle_ocr_runner.py  pdf_text_service.py  prompt_evolution_service.py  prompt_learning_service.py  prompt_optimizer_service.py  run_store.py
tests/: conftest.py  test_audit_logs.py  test_canonical_json_builder.py  test_document_compare.py  test_extractor_service.py  test_health.py  test_pdf_text_service.py  test_prompt_learning.py
utils/: __init__.py  file_loader.py  file_utils.py  json_utils.py
(+47 files in other folders)
